--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,53 @@
+# 依赖目录
 /node_modules
 /frontend/node_modules
+
+# Python 缓存文件
+__pycache__/
+*.pyc
 /backend/__pycache__
 /backend/app/__pycache__
 /backend/comfy/__pycache__
 
+# 环境文件
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+venv/
+.venv/
+env/
 
+# 日志文件
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.vscode
-.idea
+# IDE 和编辑器文件
+.vscode/
+.idea/
 *.swp
 *.swo
 
+# 操作系统生成的文件
 .DS_Store
 Thumbs.db
 
+# 构建输出
 /frontend/build
+build/
+dist/
 
+# 测试覆盖率
 /frontend/coverage
 
-*.log
+# 临时文件
 *.tmp
 *.temp
 
+# 不忽略的文件
 !.gitignore
 !README.md
 !package.json
@@ -44,3 +62,7 @@ Thumbs.db
 !backend/comfy/__init__.py
 !backend/comfy/node.py
 !backend/comfy/workflow.py
+
+# 依赖锁定文件（取消注释以忽略）
+# package-lock.json
+# yarn.lock
